# GreenBasket

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.postman/: resources.yaml  workflows.yaml
cart/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py
catalog/: admin.py  filters.py  models.py  paginators.py  serializers.py  urls.py  validators.py  views.py
catalog/fixtures/: catalog_data.json
catalog/management/commands/: seed_data.py
catalog/migrations/: 0001_initial.py  0002_product_image_delete_productimage.py  0003_alter_subcategory_unique_together_and_more.py  0004_alter_product_image_alter_product_price.py  0005_alter_product_price.py
config/: settings.py  urls.py
greenbasket/config/: settings.py
postman/collections/GreenBasket API Updated/.resources/: definition.yaml
postman/collections/GreenBasket API Updated/cart/: cart retrieve.request.yaml
postman/collections/GreenBasket API Updated/cart/add/: cart add create.request.yaml
postman/collections/GreenBasket API Updated/cart/clear/: cart clear destroy.request.yaml
postman/collections/GreenBasket API Updated/schema/: schema retrieve.request.yaml
postman/collections/GreenBasket API/.resources/: definition.yaml
postman/collections/GreenBasket API/schema/: schema retrieve.request.yaml
postman/environments/: main_env.environment.yaml
postman/specs/GreenBasket API/: GreenBasket API.yaml
users/: admin.py  backends.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_email_confirmed_and_more.py
(+75 files in other folders)
